update header.jsp & footer.jsp

--- a/src/main/webapp/resources/css/awsome.css
+++ b/src/main/webapp/resources/css/awsome.css
@@ -1,6 +1,12 @@
-
-h2{
-	color:red;
+h2 {
+	color: red;
 }
 
+.jntest{
+	color: red;
+}
 
+.preview_img {
+	max-width: 280px;
+	max-height: 300px;
+}
