--- a/src/main/webapp/comBackStage/resources/css/awsome.css
+++ b/src/main/webapp/comBackStage/resources/css/awsome.css
@@ -1,12 +1,91 @@
-h2 {
-	color: red;
+/* 進入編輯燈箱按鈕 */
+#pw{
+	background-size: cover;
+    width: 300px;
+    height: 300px;
+    position: relative;
+}
+.editBg{
+	border: inset 3px rgb(205, 199, 199);
+	position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 300px;
+    height: 300px;
+    line-height: 50px;
+    text-align: center;
+    background:rgba(255,255,255,0.7);
 }
 
-.jntest{
-	color: red;
+
+
+
+
+/* 燈箱內部修改圖片按鈕 */
+#updatePreview{
+  width: 145px;
+  height: 145px;
+  position: relative;
+  background-size: 145px 145px;
+}
+.upadteEditBg{
+	border: inset 3px rgb(205, 199, 199);
+	position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 145px;
+    height: 145px;
+    line-height: 50px;
+    text-align: center;
+    background:rgba(255,255,255,0.7);
 }
 
-.preview_img {
-	max-width: 280px;
-	max-height: 300px;
+.picBox{
+	padding: 0;
+	margin: 10px;
 }
+.updateP{
+	margin: 50px 0;
+}
+
+
+
+
+
+
+
+
+/* 燈箱 */
+button{
+  cursor: pointer;
+}
+div.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: hsla(0, 0%, 0%, .5);
+  
+  display: none;
+}
+
+/* 元素 article 置中及基本樣式 */
+div.overlay > article{
+  background-color: white;
+  width: 90%;
+  max-width: 880px;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ddd;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
