--- a/src/main/webapp/comBackStage/resources/css/awsome.css
+++ b/src/main/webapp/comBackStage/resources/css/awsome.css
@@ -89,3 +89,115 @@ div.overlay > article{
   transform: translate(-50%, -50%);
 }
 
+
+
+/* 交易細項進度條 */
+.form-progress {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 500px;
+}
+
+.form-progress-indicator {
+  position: absolute;
+  top: -11px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: white;
+  border: 3px solid #ddd;
+  border-radius: 50%;
+
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+  will-change: transform;
+}
+
+
+.form-progress-indicator.one {
+  left: -19px;
+}
+
+.form-progress-indicator.two {
+  left: 105px;
+}
+
+.form-progress-indicator.three {
+  left: 230px;
+}
+
+.form-progress-indicator.four {
+  left: 355px;
+}
+
+.form-progress-indicator.five {
+  left: 480px;
+}
+
+.text-box{
+  position: absolute;
+  top:35px;
+  left:-7px;
+  display: inline-block;
+  width: 150px;
+}
+
+.form-progress-indicator.active {
+  -webkit-animation: bounce .5s forwards;
+          animation: bounce .5s forwards;
+  -webkit-animation-delay: .5s;
+          animation-delay: .5s;
+  border-color: #27a844;
+  background:  #27a844;
+  color: red;
+}
+
+@-webkit-keyframes bounce {
+  50% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes bounce {
+  50% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+.wtforkol-box{
+  height: 300px;
+  background-color: rgb(229, 224, 224);
+  border-radius: 5px;
+}
+
+.wtforkol{
+  color: #9c9898;
+  text-align: center;
+}
+
+p, a, h5{
+
+  display: flex;        
+  align-items: center; 
+  margin: 0;
+
+
+}
+
+.hidden {
+  display: none;
+}
+/* 交易細項進度條 */
