--- a/src/main/webapp/comBackStage/resources/css/awsome.css
+++ b/src/main/webapp/comBackStage/resources/css/awsome.css
@@ -188,16 +188,49 @@ div.overlay > article{
   text-align: center;
 }
 
-p, a, h5{
+/* p, a, h5{ */
 
-  display: flex;        
-  align-items: center; 
-  margin: 0;
+/*   display: flex;         */
+/*   align-items: center;  */
+/*   margin: 0; */
 
 
-}
+/* } */
 
 .hidden {
   display: none;
 }
-/* 交易細項進度條 */
+
+
+/* star rating */
+
+.star-rating{
+	font-size: 0;
+}
+.star-rating__wrap{
+	display: inline-block;
+	font-size: 1rem;
+}
+.star-rating__wrap:after{
+	content: "";
+	display: table;
+	clear: both;
+}
+.star-rating__ico{
+	float: right;
+	padding-left: 2px;
+	cursor: pointer;
+	color: #FFB300;
+}
+.star-rating__ico:last-child{
+	padding-left: 0;
+}
+.star-rating__input{
+	display: none;
+}
+.star-rating__ico:hover:before,
+.star-rating__ico:hover ~ .star-rating__ico:before,
+.star-rating__input:checked ~ .star-rating__ico:before
+{
+	content: "\f005";
+}
