--- a/src/main/webapp/kolBackStage/resourceslee/css/style.css
+++ b/src/main/webapp/kolBackStage/resourceslee/css/style.css
@@ -1866,8 +1866,8 @@ form label {
 
 #V_member_save{
   color: #ffff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #ef2d88;
+  border-color: #ef2d88;
   box-shadow: none;
   border-radius: 10%;
   padding: 8px 10px;
