--- a/src/main/webapp/chat/css/friendchat.css
+++ b/src/main/webapp/chat/css/friendchat.css
@@ -13,7 +13,7 @@ html, body {
 
 .panel {
 	float: right;
-	border: 2px solid #0078ae;
+	border: 2px solid #ffb7dd;
 	border-radius: 5px;
 	width: 50%;
 }
@@ -27,8 +27,8 @@ html, body {
 }
 
 .input-area {
-	background: #0078ae;
-	box-shadow: inset 0 0 10px #00568c;
+	background: #ff88c2;
+	box-shadow: inset 0 0 10px #ffb7dd;
 }
 
 .input-area input {
@@ -36,7 +36,7 @@ html, body {
 }
 
 .text-field {
-	border: 1px solid grey;
+	border: 1px solid ffb7dd;
 	padding: 0.2em;
 	box-shadow: 0 0 5px #000000;
 }
@@ -53,10 +53,10 @@ h1 {
 }
 
 .statusOutput {
-	background: #0078ae;
+	background: #ff88c2;
 	text-align: center;
 	color: #ffffff;
-	border: 1px solid grey;
+	border: 1px solid ffb7dd;
 	padding: 0.2em;
 	box-shadow: 0 0 5px #000000;
 	width: 30%;
@@ -99,7 +99,7 @@ ul li{
 
 .me{
   float: right;
-  background: #0084ff;
+  background: #ff88c2;
   color: #fff;
 }
 
