--- a/src/main/webapp/chat/css/styles.css
+++ b/src/main/webapp/chat/css/styles.css
@@ -8,11 +8,11 @@ html, body {
 		Microsoft JhengHei;
 	width: 90%;
 	height: 90%;
-	background: #eeeeda;
+	background: #ffb7dd;
 }
 
 .panel {
-	border: 2px solid #0078ae;
+	border: 2px solid #ff88c2;
 	border-radius: 5px;
 	width: 100%;
 }
@@ -25,8 +25,8 @@ html, body {
 }
 
 .input-area {
-	background: #0078ae;
-	box-shadow: inset 0 0 10px #00568c;
+	background: #ff44aa;
+	box-shadow: inset 0 0 10px #ff88c2;
 }
 
 .input-area input {
@@ -34,7 +34,7 @@ html, body {
 }
 
 .text-field {
-	border: 1px solid grey;
+	border: 1px solid #ffb7dd;
 	padding: 0.2em;
 	box-shadow: 0 0 5px #000000;
 }
@@ -55,10 +55,10 @@ h1 {
 }
 
 .statusOutput {
-	background: #0078ae;
+	background: #ff88c2;
 	text-align: center;
 	color: #ffffff;
-	border: 1px solid grey;
+	border: 1px solid #ffb7dd;
 	padding: 0.2em;
 	box-shadow: 0 0 5px #000000;
 	width: 30%;
